# freedesktop-rs

./: Cargo.toml  LICENSE  flake.nix  rust-analyzer.toml
src/: error.rs  lib.rs
src/helpers/: mod.rs  trash.rs
src/parser/: mod.rs  models.rs
